[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "alldatetime"
version = "0.0.2"
authors = [
  { name="Simin Lin", email="timewalker08@outlook.com" },
]
description = "A lightweight datetime library support year from -100000 to 100000."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
]

[project.urls]
"Homepage" = "https://github.com/timewalker08/alldatetime"
"Bug Tracker" = "https://github.com/timewalker08/alldatetime/issues"